@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  29 Apr 2005; Preston Cody <codeman@gentoo.org>
+  Patches from chotchki (bug #90325) to improve CC networking.  untested.
+  
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Proxies patch from chotchki (bug #90147)
 
