@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.153 2005/04/29 05:57:09 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.154 2005/04/29 06:23:28 codeman Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
 
+  29 Apr 2005; Preston Cody <codeman@gentoo.org>
+  Patches from chotchki (bug #90325) to improve CC networking.  untested.
+  
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Proxies patch from chotchki (bug #90147). Fixed == instead of = typos in
   GLIStorageDevice (pointed out by chotchki). Fixed missing int()s
